Added skills and content

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             Hi, I’m Talib Aziz
           </h1>
           <p class="text-gray-700 text-lg leading-relaxed mb-4">
-            I’m a Full-Stack Tech Lead specializing in architecting scalable,
-            high-performance systems. Proficient in Node.js, React.js, Python,
-            MongoDB, MySQL, Generative AI, and API design, with a strong
+            I’m a Full-Stack Tech Lead specializing in architect scalable,
+            high-performance systems. Proficient in Node.js, Express.js, Nest.js, Python, FastAPI, React.js,
+            MongoDB, MySQL, Generative AI, LangChain, LangGraph and API design, with a strong
             emphasis on backend development, database optimization, and cloud
             infrastructure. Passionate about driving innovation, leading teams,
             and crafting robust solutions that power seamless user experiences.
@@ -192,7 +192,7 @@
           <p>
             Looking for a Tech Lead who can turn ideas into fast, scalable, and
             user-friendly applications? That’s exactly what I do. With expertise
-            in Node.js, React.js, Python, MongoDB, MySQL, and AI-driven
+            in Node.js, Express.js, Nest.js, Python, FastAPI, React.js, MongoDB, MySQL,LangChain, LangGraph and AI-driven
             solutions, I lead teams in building seamless digital experiences
             that are both efficient and maintainable.
           </p>
@@ -327,6 +327,14 @@
                 />
                 <p class="text-sm">Microservices</p>
               </div>
+              <div class="text-center">
+                <img
+                  src="./images/skills images/ai/llama.png"
+                  alt="Llama"
+                  class="h-8 mx-auto mb-1"
+                />
+                <p class="text-sm">Google Translate API</p>
+              </div>
             </div>
           </div>
 
@@ -356,22 +364,6 @@
               </div>
               <div class="text-center">
                 <img
-                  src="./images/skills images/database/chromadb.png"
-                  alt="ChromaDB"
-                  class="h-8 mx-auto mb-1"
-                />
-                <p class="text-sm">ChromaDB</p>
-              </div>
-              <div class="text-center">
-                <img
-                  src="./images/skills images/database/Pine_Cone.png"
-                  alt="MongoDB"
-                  class="h-8 mx-auto mb-1"
-                />
-                <p class="text-sm">Pinecone</p>
-              </div>
-              <div class="text-center">
-                <img
                   src="./images/skills images/database/redis.png"
                   alt="redis"
                   class="h-8 mx-auto mb-1"
@@ -394,6 +386,22 @@
                 />
                 <p class="text-sm">Sequelize</p>
               </div>
+              <div class="text-center">
+                <img
+                  src="./images/skills images/database/chromadb.png"
+                  alt="ChromaDB"
+                  class="h-8 mx-auto mb-1"
+                />
+                <p class="text-sm">ChromaDB</p>
+              </div>
+              <div class="text-center">
+                <img
+                  src="./images/skills images/database/Pine_Cone.png"
+                  alt="MongoDB"
+                  class="h-8 mx-auto mb-1"
+                />
+                <p class="text-sm">Pinecone</p>
+              </div>
             </div>
           </div>
 
@@ -407,7 +415,7 @@
             >
               <div class="text-center">
                 <img
-                  src="./images/skills images/ai/langchain.png"
+                  src="./images/skills images/ai/gen-ai.png"
                   alt="Generative AI"
                   class="h-8 mx-auto mb-1"
                 />
@@ -419,7 +427,23 @@
                   alt="LangChain"
                   class="h-8 mx-auto mb-1"
                 />
-                <p class="text-sm">Langchcain</p>
+                <p class="text-sm">LangChain</p>
+              </div>
+              <div class="text-center">
+                <img
+                  src="./images/skills images/ai/langchain.png"
+                  alt="LangChain"
+                  class="h-8 mx-auto mb-1"
+                />
+                <p class="text-sm">LangGraph</p>
+              </div>
+              <div class="text-center">
+                <img
+                  src="./images/skills images/ai/langsmith.png"
+                  alt="LangChain"
+                  class="h-8 mx-auto mb-1"
+                />
+                <p class="text-sm">LangSmith</p>
               </div>
               <div class="text-center">
                 <img
@@ -431,19 +455,19 @@
               </div>
               <div class="text-center">
                 <img
+                  src="./images/skills images/ai/gemini.png"
+                  alt="Open AI"
+                  class="h-8 mx-auto mb-1"
+                />
+                <p class="text-sm">Gemini</p>
+              </div>
+              <div class="text-center">
+                <img
                   src="./images/skills images/ai/n8n.png"
                   alt="LLMs"
                   class="h-8 mx-auto mb-1"
                 />
-                <p class="text-sm">LLMs</p>
-              </div>
-              <div class="text-center">
-                <img
-                  src="./images/skills images/ai/llama.png"
-                  alt="Llama"
-                  class="h-8 mx-auto mb-1"
-                />
-                <p class="text-sm">Google Translate API</p>
+                <p class="text-sm">n8n</p>
               </div>
             </div>
           </div>
@@ -795,24 +819,25 @@
           Here is a quick summary of my most recent experiences:
         </p>
 
-        <!-- Upwork Experience Card -->
+        <!-- leading SaaS company Experience Card -->
         <div class="bg-white rounded-2xl shadow-md p-6 mb-8 text-left">
           <div class="flex items-center justify-between mb-4">
             <img
               src="./images/experience/upwork.png"
-              alt="Upwork Logo"
+              alt="leading SaaS company"
               class="w-24 h-auto"
+              style="width: 1px; height: 1px;"
             />
             <span class="text-gray-500">Nov 2024 – Present | Remote</span>
           </div>
-          <h3 class="text-xl font-semibold">Full Stack Developer</h3>
+          <h3 class="text-xl font-semibold">Leading SaaS company - Full Stack Developer</h3>
           <p class="text-gray-700 mt-2 mb-4">
             At a leading SaaS company, I lead the development of scalable, high-performance applications and oversee a team of developers. I contribute to system architecture design, team mentorship, and innovation in full-stack technologies.
           </p>
           <h4 class="font-semibold mb-2">Key Projects:</h4>
           <ul class="list-disc list-inside text-gray-700 space-y-2">
             <li>
-              Architected and developed applications using Node.js, Nest.js, React.js, Python, MongoDB, and MySQL.
+              Architected and developed applications using Python, FastAPI, Node.js, Nest.js, MongoDB, and MySQL, React.js, Next.js, LangChain, LangGraph, Generative AI, Pinecone.
             </li>
             <li>
               Mentored junior developers and optimized team workflows to boost productivity.
